<?xml version="1.0"?>
<package format="2">
  <name>cost_map_server</name>
  <version>0.0.0</version>
  <description>The cost_map_server package</description>
  <maintainer email="pazuzu@todo.todo">pazuzu</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>cost_map_ros</build_depend>
  <build_depend>cost_map_visualisations</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend>

  
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>cost_map_visualisations</exec_depend>
  <exec_depend>cost_map_ros</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
