<package>
  <name>global_planner</name>
  <version>1.0.0</version>
  <description>
    This package provides global planner capabilities
  </description>
  <maintainer email="jpc4ar@gmail.com">Gamayunov Aleksandr</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend> 
  <build_depend>message_generation</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>roscpp</build_depend> 
  <build_depend>cost_map_ros</build_depend>  
  <build_depend>nav_msgs</build_depend>
  <build_depend>std_msgs</build_depend>  
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend> 
  <run_depend>roslib</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>std_msgs</run_depend>
  <!-- The export tag contains other, unspecified, tags --> 
  <export> 
    <!-- Other tools can request additional information be placed here --> 
 
  </export> 
</package> 