<?xml version="1.0"?>
<package format="2">
  <name>local_planning</name>
  <version>0.0.0</version>
  <description>The local_planning package</description>

  <maintainer email="ristle@yandex.ru">genie</maintainer>

  <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend> 
    <build_depend>roslib</build_depend>
    <build_depend>roscpp</build_depend> 
    <build_depend>cost_map_ros</build_depend> 
    <build_depend>cost_map_visualisations</build_depend> 
    <build_depend>nav_msgs</build_depend> 
    <build_depend>roscpp</build_depend> 
    <build_depend>std_msgs</build_depend> 
    <build_depend>cost_map_visualisations</build_depend> 
    <build_depend>cost_map_ros</build_depend> 
    <build_depend>nav_msgs</build_depend> 
    <build_depend>roscpp</build_depend> 
    <build_depend>message_generation</build_depend>
    <build_export_depend>rocpp</build_export_depend>
    <build_export_depend>rospy</build_export_depend>
    <build_export_depend>std_msgs</build_export_depend>
    <build_export_depend>nav_msgs</build_export_depend>
    <exec_depend>message_generation</exec_depend>
    <exec_depend>roscpp</exec_depend>
    <exec_depend>rospy</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>nav_msgs</exec_depend>
  <export>
  </export>
</package>
